mpijob.133400.err
Lmod has detected the following error: The following module(s) are unknown:
"cuda"

Please check the spelling or version number. Also try "module spider ..."
It is also possible your cache file is out-of-date; it may help to try:
  $ module --ignore_cache load "cuda"

Also make sure that all modulefiles written in TCL start with the string
#%Module



horn_schunk_cuda_copy.cu:324:5: error: use of undeclared identifier 'CHECK_CUDA'
  324 |     CHECK_CUDA(cudaStreamCreate(&quad.stream));
      |     ^
horn_schunk_cuda_copy.cu:354:5: error: use of undeclared identifier 'CHECK_CUDA'
  354 |     CHECK_CUDA(cudaMemcpyAsync(send_halos.top.data(), 
      |     ^
horn_schunk_cuda_copy.cu:363:5: error: use of undeclared identifier 'CHECK_CUDA'
  363 |     CHECK_CUDA(cudaStreamSynchronize(quad.stream));
      |     ^
horn_schunk_cuda_copy.cu:369:9: error: use of undeclared identifier 'CHECK_MPI'
  369 |         CHECK_MPI(MPI_Isend(send_halos.top.data(), w * hw, MPI_DOUBLE, 
      |         ^
horn_schunk_cuda_copy.cu:371:9: error: use of undeclared identifier 'CHECK_MPI'
  371 |         CHECK_MPI(MPI_Irecv(recv_halos.top.data(), w * hw, MPI_DOUBLE, 
      |         ^
horn_schunk_cuda_copy.cu:379:9: error: use of undeclared identifier 'CHECK_MPI'
  379 |         CHECK_MPI(MPI_Waitall(requests.size(), requests.data(), MPI_STATUSES_IGNORE));
      |         ^
horn_schunk_cuda_copy.cu:383:5: error: use of undeclared identifier 'CHECK_CUDA'
  383 |     CHECK_CUDA(cudaMemcpyAsync(u_d + (quad.start_y - quad.halo_width) * quad.width,
      |     ^
horn_schunk_cuda_copy.cu:392:5: error: use of undeclared identifier 'CHECK_CUDA'
  392 |     CHECK_CUDA(cudaStreamSynchronize(quad.stream));
      |     ^
horn_schunk_cuda_copy.cu:397:5: error: use of undeclared identifier 'CHECK_MPI'
  397 |     CHECK_MPI(MPI_Init(&argc, &argv));
      |     ^
horn_schunk_cuda_copy.cu:400:5: error: use of undeclared identifier 'CHECK_MPI'
  400 |     CHECK_MPI(MPI_Comm_rank(MPI_COMM_WORLD, &world_rank));
      |     ^
horn_schunk_cuda_copy.cu:401:5: error: use of undeclared identifier 'CHECK_MPI'
  401 |     CHECK_MPI(MPI_Comm_size(MPI_COMM_WORLD, &world_size));
      |     ^
horn_schunk_cuda_copy.cu:413:5: error: use of undeclared identifier 'CHECK_CUDA'
  413 |     CHECK_CUDA(cudaGetDeviceCount(&num_gpus));
      |     ^
horn_schunk_cuda_copy.cu:414:5: error: use of undeclared identifier 'CHECK_CUDA'
  414 |     CHECK_CUDA(cudaSetDevice(world_rank % num_gpus));
      |     ^
horn_schunk_cuda_copy.cu:435:5: error: use of undeclared identifier 'CHECK_MPI'
  435 |     CHECK_MPI(MPI_Bcast(&nx, 1, MPI_INT, 0, MPI_COMM_WORLD));
      |     ^
horn_schunk_cuda_copy.cu:436:5: error: use of undeclared identifier 'CHECK_MPI'
  436 |     CHECK_MPI(MPI_Bcast(&ny, 1, MPI_INT, 0, MPI_COMM_WORLD));
      |     ^
horn_schunk_cuda_copy.cu:446:5: error: use of undeclared identifier 'CHECK_CUDA'
  446 |     CHECK_CUDA(cudaMalloc(&u_d, quad_size));
      |     ^
horn_schunk_cuda_copy.cu:447:5: error: use of undeclared identifier 'CHECK_CUDA'
  447 |     CHECK_CUDA(cudaMalloc(&v_d, quad_size));
      |     ^
horn_schunk_cuda_copy.cu:448:5: error: use of undeclared identifier 'CHECK_CUDA'
  448 |     CHECK_CUDA(cudaMalloc(&IxDevice, quad_size));
      |     ^
horn_schunk_cuda_copy.cu:449:5: error: use of undeclared identifier 'CHECK_CUDA'
  449 |     CHECK_CUDA(cudaMalloc(&IyDevice, quad_size));
      |     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated when compiling for gfx90a.
failed to execute:/opt/rocm-6.2.1/lib/llvm/bin/clang++  --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --driver-mode=g++ --hip-link  -x hip -O2 horn_schunk_cuda_copy.cu -DUSE_HIP -I/opt/ohpc/pub/mpi/openmpi4-gnu12/4.1.5/include -I/home1/bustudent08/local/include/opencv4 -L/home1/bustudent08/local/lib64 -lopencv_core -lopencv_highgui -lopencv_imgproc -lopencv_imgcodecs -lopencv_video -std=c++17 -lmpi -Wl,-rpath=/home1/bustudent08/local/lib64 -o "optical_flow.exe"
slurmstepd-t004-004: error: execve(): /home1/bustudent08/APMA2822B/ARRAYS/Cuda-Horn-Schunk/./optical_flow.exe: No such file or directory
slurmstepd-t004-004: error: execve(): /home1/bustudent08/APMA2822B/ARRAYS/Cuda-Horn-Schunk/./optical_flow.exe: No such file or directory
slurmstepd-t004-004: error: execve(): /home1/bustudent08/APMA2822B/ARRAYS/Cuda-Horn-Schunk/./optical_flow.exe: No such file or directory
slurmstepd-t004-004: error: execve(): /home1/bustudent08/APMA2822B/ARRAYS/Cuda-Horn-Schunk/./optical_flow.exe: No such file or directory
srun: error: t004-004: tasks 0-3: Exited with exit code 2
